Dockerfile에 모델 예측 결과를 파일로 저장하는 명령어 추가; test.py에 로그 파일 저장 기능 및 평가 결과 기록 기능 추가

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -126,3 +126,6 @@ CMD ["python"]
 
 # 모델 prediction 과정에서 matplotlib와 open3d로 visualization
 # python tools/test.py configs/fusion_occ/fusion_occ.py ckpt/fusion_occ_mask.pth --load-results results/results.pkl --show-dir ./datasets_vis
+
+# 모델 prediction 과정에서 visualization 없이 결과를 파일로 저장
+# python tools/test.py configs/fusion_occ/fusion_occ.py ckpt/my_fusion_occ_mask_ep1.pth --load-results my_results.pkl --log-file my_results.log
