Update .cursorignore to include additional ignore patterns; add .cursorrules for indexing configuration; implement check_corrupted_files.py for file integrity checks; create README_file_check.md for usage instructions; add run_file_check.sh for execution automation.

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,2 +1,13 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
-./data/
+# 빌드 관련 폴더들만 무시
+build/
+*.egg-info/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.env
+.venv
