--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,36 +1,43 @@
 {
-  "exclude": [
-    "**/__pycache__",
-    "**/node_modules",
-    "**/.git",
-    "data/**",
-    "results/**",
-    "ckpt/**",
-    "datasets_vis/**",
-    "work_dirs/**",
-    "build/**",
-    ".dist_test/**",
-    "**/*.pkl",
-    "**/*.pth",
-    "**/*.pt",
-    "**/*.h5",
-    "**/*.hdf5",
-    "**/*.npz",
-    "**/*.tar.gz",
-    "**/*.zip"
-  ],
-  "include": [
-    "mmdet3d/**",
-    "tools/**",
-    "configs/**"
-  ],
-  "pythonVersion": "3.8",
-  "typeCheckingMode": "basic",
-  "useLibraryCodeForTypes": true,
-  "reportMissingImports": "warning",
-  "reportMissingTypeStubs": false,
-  "reportUnusedImport": "warning",
-  "reportUnusedClass": "warning",
-  "reportUnusedFunction": "warning",
-  "reportUnusedVariable": "warning"
+    "exclude": [
+        "**/node_modules",
+        "**/__pycache__",
+        "**/build",
+        "**/*.egg-info",
+        "**/venv",
+        "**/env",
+        "**/.venv",
+        "**/.env",
+        "**/data",
+        "**/ckpt",
+        "**/results",
+        "**/work_dirs",
+        "**/datasets_vis",
+        "**/.dist_test",
+        "**/img_seg",
+        "**/assets",
+        "**/docs",
+        "**/docker",
+        "**/tools",
+        "**/.git",
+        "**/.vscode",
+        "**/mmdet3d.egg-info"
+    ],
+    "include": [
+        "mmdet3d",
+        "configs",
+        "*.py",
+        "*.md",
+        "*.txt",
+        "*.json",
+        "*.yml",
+        "*.yaml"
+    ],
+    "venvPath": ".",
+    "pythonVersion": "3.8",
+    "typeCheckingMode": "basic",
+    "useLibraryCodeForTypes": true,
+    "autoImportCompletions": true,
+    "reportMissingImports": "warning",
+    "reportMissingTypeStubs": false
 } 
