Enhance Docker setup and logging for FusionOcc project
- Add Dockerfile and docker-compose.yml for containerized environment.
- Introduce .dockerignore to exclude unnecessary files from Docker builds.
- Create README_Docker.md for detailed Docker usage instructions.
- Update fusion_occ.py configuration for dataset paths and model settings.
- Implement logging functionality in test.py to capture evaluation results and metadata.
- Adjust file structure to support new Docker setup and improve project organization.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,40 +1,92 @@
-ARG PYTORCH="1.9.0"
-ARG CUDA="11.1"
-ARG CUDNN="8"
+# Use NVIDIA CUDA base image with Python 3.10
+FROM nvidia/cuda:12.1-devel-ubuntu20.04
 
-FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-devel
+# Set environment variables
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
+ENV TORCH_CUDA_ARCH_LIST="6.0 6.1 7.0 7.5 8.0 8.6+PTX"
+ENV TORCH_NVCC_FLAGS="-Xfatbin -compress-all"
+ENV FORCE_CUDA="1"
 
-ENV TORCH_CUDA_ARCH_LIST="6.0 6.1 7.0 7.5 8.0 8.6+PTX" \
-    TORCH_NVCC_FLAGS="-Xfatbin -compress-all" \
-    CMAKE_PREFIX_PATH="$(dirname $(which conda))/../" \
-    FORCE_CUDA="1"
+# Set working directory
+WORKDIR /workspace/FusionOcc
 
-# Avoid Public GPG key error
-# https://github.com/NVIDIA/nvidia-docker/issues/1631
-RUN rm /etc/apt/sources.list.d/cuda.list \
-    && rm /etc/apt/sources.list.d/nvidia-ml.list \
-    && apt-key del 7fa2af80 \
-    && apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub \
-    && apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub
-
-# (Optional, use Mirror to speed up downloads)
-# RUN sed -i 's/http:\/\/archive.ubuntu.com\/ubuntu\//http:\/\/mirrors.aliyun.com\/ubuntu\//g' /etc/apt/sources.list && \
-#    pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
-
-# Install the required packages
-RUN apt-get update \
-    && apt-get install -y ffmpeg libsm6 libxext6 git ninja-build libglib2.0-0 libsm6 libxrender-dev libxext6 \
-    && apt-get clean \
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    python3.10 \
+    python3.10-dev \
+    python3-pip \
+    git \
+    wget \
+    curl \
+    vim \
+    build-essential \
+    cmake \
+    ninja-build \
+    libglib2.0-0 \
+    libsm6 \
+    libxrender-dev \
+    libxext6 \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
     && rm -rf /var/lib/apt/lists/*
 
-# Install MMEngine, MMCV and MMDetection
+# Create symbolic link for python
+RUN ln -s /usr/bin/python3.10 /usr/bin/python
+
+# Upgrade pip
+RUN python -m pip install --upgrade pip
+
+# Install PyTorch with CUDA support
+RUN pip install torch==2.1.0 torchvision==0.16.0 torchaudio==2.1.0 --index-url https://download.pytorch.org/whl/cu121
+
+# Install MMCV and MMDetection
 RUN pip install openmim && \
-    mim install "mmengine" "mmcv>=2.0.0rc4" "mmdet>=3.0.0"
+    mim install "mmengine>=0.10.3" "mmcv>=2.1.0" "mmdet>=3.2.0"
 
-# Install MMDetection3D
-RUN conda clean --all \
-    && git clone https://github.com/open-mmlab/mmdetection3d.git -b dev-1.x /mmdetection3d \
-    && cd /mmdetection3d \
-    && pip install --no-cache-dir -e .
+# Install additional dependencies
+RUN pip install \
+    lyft_dataset_sdk \
+    networkx>=2.5 \
+    numba \
+    numpy<2.0 \
+    nuscenes-devkit \
+    open3d \
+    plyfile \
+    scikit-image \
+    tensorboard \
+    trimesh \
+    torch-scatter==2.1.2
 
-WORKDIR /mmdetection3d
+# Install optional dependencies
+RUN pip install \
+    black==20.8b1 \
+    typing-extensions \
+    waymo-open-dataset-tf-2-11-0
+
+# Install test dependencies
+RUN pip install \
+    codecov \
+    flake8 \
+    interrogate \
+    isort \
+    kwarray \
+    parameterized \
+    pytest \
+    pytest-cov \
+    pytest-runner \
+    ubelt \
+    xdoctest>=0.10.0 \
+    yapf
+
+# Copy the current project files
+COPY . /workspace/FusionOcc/
+
+# Install the project in development mode
+RUN pip install -e .
+
+# Set default command
+CMD ["/bin/bash"] 
