--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,13 @@ mmdet3d/evaluation/functional/waymo_utils/compute_detection_metrics_main
 mmdet3d/evaluation/functional/waymo_utils/compute_detection_let_metrics_main
 ckpt
 results
+
+# reference code
+BEVFormer_ori/
+CONet_ori/
+FusionOcc_ori/
+RadarOcc_ori/
+STCOcc_ori/
+SurroundOcc_ori/
+TEOcc_ori/
+TPVFormer_ori/
