Update .gitignore to include 'pretrain' directory and remove corrupted file check scripts
- Added 'pretrain' directory to .gitignore to prevent indexing of pre-trained model files.
- Deleted the `check_corrupted_files.py` script along with its README and associated shell script, as they are no longer needed.
- Removed `setup_data_links.sh` and other related files to streamline the project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ mmdet3d/evaluation/functional/waymo_utils/compute_detection_metrics_main
 mmdet3d/evaluation/functional/waymo_utils/compute_detection_let_metrics_main
 ckpt
 results
+pretrain
 
 # reference code
 BEVFormer_ori/
