Update .gitignore and add pyright configuration file
- Removed `RadarOcc_ori/` from .gitignore and added `Ref/` to include new directories in version control.
- Introduced a new `pyrightconfig.json` file to specify type checking settings and exclude unnecessary files from type checking, enhancing development workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -142,11 +142,11 @@ pretrain
 BEVFormer_ori/
 CONet_ori/
 FusionOcc_ori/
-RadarOcc_ori/
 STCOcc_ori/
 SurroundOcc_ori/
 TEOcc_ori/
 TPVFormer_ori/
+Ref/
 
 # debug
 debug_outputs
